packages/swc-magic/transform/tests/errors/two-children/output-swc.js
import _JSXStyle from "swc-magic/style";
export default (()=><div>

    <style jsx>

      {`.p {}`}

      {`.p {}`}

    </style>

  </div>);
